--- a/incodityReservation.Infrastructure/incodityReservation.Infrastructure.csproj
+++ b/incodityReservation.Infrastructure/incodityReservation.Infrastructure.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0"></PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0"></PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\incodityReservation.Domain\incodityReservation.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
