--- a/incodityReservation.Web/incodityReservation.Web.csproj
+++ b/incodityReservation.Web/incodityReservation.Web.csproj
@@ -5,5 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0"></PackageReference>
+	</ItemGroup>
 </Project>
