--- a/incodityReservation.Web/appsettings.json
+++ b/incodityReservation.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Server=.;Database=incodityRSVdb;Integrated Security=True;TrustServerCertificate=True",
+    "AppDb2": "Connection String 2"
+  }
 }
