--- a/incodityReservation.Web/incodityReservation.Web.csproj
+++ b/incodityReservation.Web/incodityReservation.Web.csproj
@@ -6,9 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0"></PackageReference>
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\incodityReservation.Application\incodityReservation.Application.csproj" />
 	  <ProjectReference Include="..\incodityReservation.Infrastructure\incodityReservation.Infrastructure.csproj" />
 	</ItemGroup>
 </Project>
